# pipecat-ai-macos-transport

./: .gitignore  README.md  pyproject.toml
scripts/: build_vpio.sh
src/pipecat_macos_transport/: __init__.py  local_mac_transport.py  vad_resample_adapter.py
src/pipecat_macos_transport/macos/: libvpio.dylib
test/: bot.py  pyproject.toml
