[project]
name = "pipecat-ai-macos-transport"
version = "0.0.0"
description = "Local macOS transport (VoiceProcessingIO + AEC) for Pipecat"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Your Org"}]
license = {text = "Proprietary"}
dependencies = [
  "pipecat-ai>=0.0.0",  # adjust to your installed version
  "loguru>=0.7",
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["src"], include = ["pipecat_macos_transport*" ]}}
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"pipecat_macos_transport" = ["macos/*"]

